--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -25,3 +25,4 @@ executable ydserver
                        , bytestring ==0.10.*
                        , text ==0.11.*
                        , transformers ==0.3.*
+                       , time ==1.4.*
