--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -20,9 +20,13 @@ executable ydserver
   build-depends:       base ==4.6.*
                        , warp ==3.0.*
                        , scotty ==0.9.*
+                       , http-types ==0.8.*
+                       , network ==2.4.*
+                       , mime ==0.4.*
                        , data-default ==0.5.*
                        , postgresql-simple ==0.4.*
                        , bytestring ==0.10.*
                        , text ==0.11.*
                        , transformers ==0.3.*
                        , time ==1.4.*
+                       , old-locale ==1.0.*
