--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -30,3 +30,4 @@ executable ydserver
                        , transformers ==0.3.*
                        , time ==1.4.*
                        , old-locale ==1.0.*
+                       , optparse-applicative ==0.11.*
