--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -54,3 +54,4 @@ Test-Suite test-web
                        , time ==1.4.*
                        , old-locale ==1.0.*
                        , optparse-applicative ==0.11.*
+                       , case-insensitive ==1.1.*
