--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -55,3 +55,4 @@ Test-Suite test-web
                        , old-locale ==1.0.*
                        , optparse-applicative ==0.11.*
                        , case-insensitive ==1.1.*
+                       , either ==4.3.*
