--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -32,6 +32,7 @@ executable ydserver
                        , time ==1.4.*
                        , old-locale ==1.0.*
                        , optparse-applicative ==0.11.*
+                       , aeson ==0.7.*
 
 Test-Suite test-web
   type:                detailed-0.9
@@ -57,3 +58,5 @@ Test-Suite test-web
                        , optparse-applicative ==0.11.*
                        , case-insensitive ==1.1.*
                        , either ==4.3.*
+                       , aeson ==0.7.*
+                       , unordered-containers ==0.2.*
