--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -30,6 +30,7 @@ executable ydserver
                        , text ==0.11.*
                        , transformers ==0.3.*
                        , time ==1.4.*
+                       , iso8601-time ==0.1.*
                        , old-locale ==1.0.*
                        , optparse-applicative ==0.11.*
                        , aeson ==0.7.*
@@ -55,6 +56,7 @@ Test-Suite test-web
                        , blaze-builder ==0.3.*
                        , transformers ==0.3.*
                        , time ==1.4.*
+                       , iso8601-time ==0.1.*
                        , old-locale ==1.0.*
                        , optparse-applicative ==0.11.*
                        , case-insensitive ==1.1.*
