--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -64,3 +64,11 @@ Test-Suite test-web
                        , either ==4.3.*
                        , aeson ==0.7.*
                        , unordered-containers ==0.2.*
+
+Test-Suite test-holex
+  type:                detailed-0.9
+  test-module:         YouDo.Holex.Test
+  other-modules:       YouDo.Holex
+  ghc-options:         -Wall
+  build-depends:       base ==4.6.*
+                       , Cabal >=1.8
