--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -72,3 +72,4 @@ Test-Suite test-holex
   ghc-options:         -Wall
   build-depends:       base ==4.6.*
                        , Cabal >=1.8
+                       , mtl ==2.1.*
