--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -28,6 +28,7 @@ executable ydserver
                        , postgresql-simple ==0.4.*
                        , bytestring ==0.10.*
                        , text ==0.11.*
+                       , mtl ==2.1.*
                        , transformers ==0.3.*
                        , time ==1.4.*
                        , iso8601-time ==0.1.*
@@ -55,6 +56,7 @@ Test-Suite test-web
                        , bytestring ==0.10.*
                        , text ==0.11.*
                        , blaze-builder ==0.3.*
+                       , mtl ==2.1.*
                        , transformers ==0.3.*
                        , time ==1.4.*
                        , iso8601-time ==0.1.*
