--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -75,3 +75,5 @@ Test-Suite test-holex
   build-depends:       base ==4.6.*
                        , Cabal >=1.8
                        , mtl ==2.1.*
+                       , text ==0.11.*
+                       , scotty ==0.9.*
