--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -42,7 +42,7 @@ Test-Suite test-web
   type:                detailed-0.9
   test-module:         YouDo.Web.Test
   other-modules:       YouDo.Web, YouDo.DB, YouDo.DB.Mock, YouDo.DB.PostgreSQL,
-                       YouDo.Holex
+                       YouDo.Holex, YouDo.Test
   ghc-options:         -Wall
   build-depends:       base ==4.6.*
                        , Cabal >=1.8
@@ -71,7 +71,7 @@ Test-Suite test-web
 Test-Suite test-holex
   type:                detailed-0.9
   test-module:         YouDo.Holex.Test
-  other-modules:       YouDo.Holex
+  other-modules:       YouDo.Holex, YouDo.Test
   ghc-options:         -Wall
   build-depends:       base ==4.6.*
                        , Cabal >=1.8
