--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -78,3 +78,4 @@ Test-Suite test-holex
                        , mtl ==2.1.*
                        , text ==0.11.*
                        , scotty ==0.9.*
+                       , either ==4.3.*
