--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -76,6 +76,7 @@ Test-Suite test-holex
   build-depends:       base ==4.6.*
                        , Cabal >=1.8
                        , mtl ==2.1.*
+                       , transformers ==0.3.*
                        , text ==0.11.*
                        , scotty ==0.9.*
                        , either ==4.3.*
