Split DB stuff out of YouDo.Types and into YouDo.DB

--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -41,7 +41,7 @@ executable ydserver
 Test-Suite test-web
   type:                detailed-0.9
   test-module:         YouDo.Web.Test
-  other-modules:       YouDo.Web, YouDo.DB.Mock, YouDo.DB.PostgreSQL,
+  other-modules:       YouDo.Web, YouDo.DB, YouDo.DB.Mock, YouDo.DB.PostgreSQL,
                        YouDo.Holex, YouDo.Test, YouDo.Types
   ghc-options:         -Wall
   build-depends:       base ==4.6.*
