--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -16,67 +16,86 @@ cabal-version:       >=1.8
 
 executable ydserver
   main-is:             server.hs
+  hs-source-dirs:      server
   ghc-options:         -Wall
-  -- other-modules:       
+  other-modules:       YouDo.Web.Main
   build-depends:       base ==4.6.*
-                       , warp ==3.0.*
+                       , youdo ==0.1.*
+
                        , scotty ==0.9.*
+                       , warp ==3.0.*
+                       , postgresql-simple ==0.4.*
+                       , optparse-applicative ==0.11.*
+
+                       , network ==2.4.*
+
+                       , data-default ==0.5.*
+                       , bytestring ==0.10.*
+
+library
+  hs-source-dirs:      src
+  exposed-modules:     YouDo.DB
+                       , YouDo.DB.Mock
+                       , YouDo.DB.PostgreSQL
+                       , YouDo.Holex
+                       , YouDo.Test
+                       , YouDo.Types
+                       , YouDo.Web
+  ghc-options:         -Wall
+  build-depends:       base ==4.6.*
+                       , Cabal ==1.16.*
+
+                       , scotty ==0.9.*
+                       , aeson ==0.7.*
+                       , postgresql-simple ==0.4.*
+
                        , http-types ==0.8.*
                        , network ==2.4.*
                        , mime ==0.4.*
-                       , data-default ==0.5.*
-                       , postgresql-simple ==0.4.*
-                       , bytestring ==0.10.*
-                       , text ==0.11.*
+
+                       , either ==4.3.*
                        , mtl ==2.1.*
                        , transformers ==0.3.*
-                       , time ==1.4.*
+
+                       , bytestring ==0.10.*
+                       , data-default ==0.5.*
                        , iso8601-time ==0.1.*
+                       , text ==0.11.*
+                       , time ==1.4.*
                        , old-locale ==1.0.*
-                       , optparse-applicative ==0.11.*
-                       , aeson ==0.7.*
                        , unordered-containers ==0.2.*
-                       , either ==4.3.*
 
 Test-Suite test-web
   type:                detailed-0.9
   test-module:         YouDo.Web.Test
-  other-modules:       YouDo.Web, YouDo.DB, YouDo.DB.Mock, YouDo.DB.PostgreSQL,
-                       YouDo.Holex, YouDo.Test, YouDo.Types
+  hs-source-dirs:      test/web
   ghc-options:         -Wall
   build-depends:       base ==4.6.*
-                       , Cabal >=1.8
-                       , wai ==3.0.*
-                       , warp ==3.0.*
+                       , youdo ==0.1.*
+                       , Cabal ==1.16.*
+
                        , scotty ==0.9.*
+                       , blaze-builder ==0.3.*
+                       , aeson ==0.7.*
+                       , wai ==3.0.*
+
                        , http-types ==0.8.*
                        , network ==2.4.*
-                       , mime ==0.4.*
-                       , data-default ==0.5.*
-                       , postgresql-simple ==0.4.*
-                       , bytestring ==0.10.*
-                       , text ==0.11.*
-                       , blaze-builder ==0.3.*
-                       , mtl ==2.1.*
-                       , transformers ==0.3.*
-                       , time ==1.4.*
-                       , iso8601-time ==0.1.*
-                       , old-locale ==1.0.*
-                       , optparse-applicative ==0.11.*
-                       , case-insensitive ==1.1.*
+
                        , either ==4.3.*
-                       , aeson ==0.7.*
+                       , transformers ==0.3.*
+
+                       , bytestring ==0.10.*
+                       , case-insensitive ==1.1.*
+                       , text ==0.11.*
                        , unordered-containers ==0.2.*
 
 Test-Suite test-holex
   type:                detailed-0.9
   test-module:         YouDo.Holex.Test
-  other-modules:       YouDo.Holex, YouDo.Test
+  hs-source-dirs:      test/holex
   ghc-options:         -Wall
   build-depends:       base ==4.6.*
-                       , Cabal >=1.8
+                       , youdo ==0.1.*
+                       , Cabal ==1.16.*
                        , mtl ==2.1.*
-                       , transformers ==0.3.*
-                       , text ==0.11.*
-                       , scotty ==0.9.*
-                       , either ==4.3.*
