--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -25,8 +25,9 @@ executable ydserver
                        , scotty ==0.9.*
                        , postgresql-simple ==0.4.*
                        , warp ==3.0.*
-
                        , optparse-applicative ==0.11.*
+
+                       , mtl ==2.1.*
 
                        , network ==2.4.*
 
@@ -86,6 +87,7 @@ Test-Suite test-web
 
                        , either ==4.3.*
                        , transformers ==0.3.*
+                       , mtl ==2.1.*
 
                        , bytestring ==0.10.*
                        , case-insensitive ==1.1.*
