Split off YouDo.Web.Response

--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -33,6 +33,7 @@ library
                        , YouDo.Types
                        , YouDo.Web
                        , YouDo.Web.ActionM
+                       , YouDo.Web.Response
                        , YouDo.WebApp
   ghc-options:         -Wall
   build-depends:       base ==4.6.*
