Split off YouDo.Const and YouDo.Web.Docs

--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -33,6 +33,7 @@ library
                        , YouDo.Types
                        , YouDo.Web
                        , YouDo.Web.ActionM
+                       , YouDo.Web.Docs
                        , YouDo.Web.Relative
                        , YouDo.Web.Response
                        , YouDo.Web.Service
