Split off YouDo.Web.Request

--- a/web/youdo.cabal
+++ b/web/youdo.cabal
@@ -31,10 +31,10 @@ library
                        , YouDo.Test
                        , YouDo.TimeParser
                        , YouDo.Types
-                       , YouDo.Web
                        , YouDo.Web.ActionM
                        , YouDo.Web.Docs
                        , YouDo.Web.Relative
+                       , YouDo.Web.Request
                        , YouDo.Web.Response
                        , YouDo.Web.Service
                        , YouDo.WebApp
